--- a/app/common/views/header.jade
+++ b/app/common/views/header.jade
@@ -10,3 +10,4 @@ div.page-header(ng-hide='HeaderService.pageLoadFailure || !securityService.login
   div(ng-show='securityService.loginStatus.isLoggedIn && securityService.loginStatus.authedUser.has_chat && HeaderService.sfdcIsHealthy', rha-chatbutton='')
 div(rha-loginstatus='')
 div(ng-show='!HeaderService.sfdcIsHealthy', ng-bind-html='parseSfdcOutageHtml()')
+language-select
