added language selector

--- a/app/common/views/languageSelect.jade
+++ b/app/common/views/languageSelect.jade
@@ -1,3 +1,9 @@
-label {{'Change Language  ' | translate}}
-select(ng-model='CaseService.currentLanguage')
-    option(ng-repeat="lang in supportedLanguages" ng-click="changeCurrentLanguage(lang.code)" value="{{lang.code}}") {{lang.name}}
+.language-select-container
+    select(
+        chosen,
+        width='"auto"',
+        ng-model='HeaderService.currentLanguage'
+        ng-change='HeaderService.changeCurrentLanguage()',
+        ng-options='lang.code as lang.name for lang in HeaderService.supportedLanguages'
+        disable_search_threshold=12
+    )
