--- a/app/common/styles/helpers.css
+++ b/app/common/styles/helpers.css
@@ -96,3 +96,9 @@
         width: 95% !important;
     }
 }
+
+.language-select-container, language-select {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
