--- a/app/common/views/header.jade
+++ b/app/common/views/header.jade
@@ -1,4 +1,3 @@
-language-select
 div(rha-403error='')
 div(rha-404error='')
 div(ng-show='HeaderService.sfdcIsHealthy')
@@ -6,7 +5,7 @@ div(rha-alert='')
 div(ng-hide='failedToLoadCase || !securityService.loginStatus.userAllowedToManageCases')
   .spinner.spinner-inline(ng-show='pageLoading')
 div.page-header(ng-hide='HeaderService.pageLoadFailure || !securityService.loginStatus.userAllowedToManageCases')
-  div(ng-hide='page ===""', rha-titletemplate='', page="{{page}}")
+  .title-template(ng-hide='page ===""', rha-titletemplate='', page="{{page}}")
   div(ng-show='page === "caseView"') Filed on&nbsp;
   div(ng-show='securityService.loginStatus.isLoggedIn && securityService.loginStatus.authedUser.has_chat && HeaderService.sfdcIsHealthy', rha-chatbutton='')
 div(rha-loginstatus='')
