added tooltip to language selector and changed caseView pageheader

--- a/app/common/views/languageSelect.jade
+++ b/app/common/views/languageSelect.jade
@@ -1,4 +1,4 @@
-.language-selector(ng-if='HeaderService.currentLanguage')
+.language-selector(uib-tooltip='{{"Language Selector" | translate}}')
     select(
         chosen,
         width='"auto"',
